# DJMix

./: .gitignore  ARCHITECTURE_REDESIGN.md  CPP_AUDIO_ENGINE_PLAN.md  DJApp.slnx  IMPLEMENTATION_COMPLETE.md  TODO.md
DJApp/: App.xaml  App.xaml.cs  DJApp.csproj  MainWindow.xaml  MainWindow.xaml.cs
DJApp/Models/: PlaylistItem.cs  TrackInfo.cs
DJApp/Services/: AudioDeck.cs  AudioEngineInterop.cs  AutoMixEngine.cs  BeatDetector.cs  DeckSampleProvider.cs  EqualizerSampleProvider.cs  MixerSampleProvider.cs  PlaylistManager.cs  SoundTouchSampleProvider.cs  WaveformService.cs
DJApp/Styles/: DarkTheme.xaml
DJApp/ViewModels/: DeckViewModel.cs  MainViewModel.cs  PlaylistViewModel.cs  RelayCommand.cs  ViewModelBase.cs
DJAudioEngine/: CMakeLists.txt
DJAudioEngine/include/: dj_audio_engine.h
DJAudioEngine/libs/ASIOSDK/: changes.txt
DJAudioEngine/libs/ASIOSDK/driver/asiosample/: asiosample.txt  asiosmpl.cpp  asiosmpl.h  macnanosecs.cpp  mactimer.cpp  makesamp.cpp  wintimer.cpp
DJAudioEngine/src/: audio_engine.cpp  audio_file.cpp  bpm_analyzer.cpp  deck.cpp  dj_audio_internal.h  mixer.cpp  soundtouch_wrap.cpp  sync.cpp
